--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -18,6 +18,7 @@ steps:
   displayName: Test
 
 - bash: dotnet pack --no-restore --output $(sharedPackagesFolder) /p:PackageVersion=$(NewVersion.NextVersion)
+  condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
   displayName: Pack
   condition: and(succeeded(), ne(variables['NewVersion.NextVersion'], ''))
 
