--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -33,30 +33,30 @@ jobs:
       
       - template: "./build.yml"
       
-      - task: NuGetCommand@2
-        displayName: Push Nuget packs
-        condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
-        inputs:
-          command: push
-          nugetFeedType: "external"
-          packagesToPush: "$(sharedPackagesFolder)/**/*.nupkg;!$(sharedPackagesFolder)/**/*.symbols.nupkg"
-          publishFeedCredentials: "myget_mathieu"
+      # - task: NuGetCommand@2
+      #   displayName: Push Nuget packs
+      #   condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
+      #   inputs:
+      #     command: push
+      #     nugetFeedType: "external"
+      #     packagesToPush: "$(sharedPackagesFolder)/**/*.nupkg;!$(sharedPackagesFolder)/**/*.symbols.nupkg"
+      #     publishFeedCredentials: "myget_mathieu"
 
-      - task: Dolittle.tasks.TagNewVersion.TagNewVersion@0
-        condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
-        displayName: Tagging new version
-        inputs:
-          Connection: 'service-dolittle-build'
-          Version: $(NewVersion.NextVersion)
+      # - task: Dolittle.tasks.TagNewVersion.TagNewVersion@0
+      #   condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
+      #   displayName: Tagging new version
+      #   inputs:
+      #     Connection: 'service-dolittle-build'
+      #     Version: $(NewVersion.NextVersion)
 
-      - task: Dolittle.tasks.TriggerCascadingBuilds.TriggerCascadingBuilds@0
-        condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
-        displayName: Triggering cascading builds
-        inputs:
-          Connection: 'service-dolittle-build'
-          ShouldPublish: $(Context.ShouldPublish)
-          NextVersion: $(NewVersion.NextVersion)
-          Cascades: ${{ join(',', parameters.CASCADES) }}
+      # - task: Dolittle.tasks.TriggerCascadingBuilds.TriggerCascadingBuilds@0
+      #   condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
+      #   displayName: Triggering cascading builds
+      #   inputs:
+      #     Connection: 'service-dolittle-build'
+      #     ShouldPublish: $(Context.ShouldPublish)
+      #     NextVersion: $(NewVersion.NextVersion)
+      #     Cascades: ${{ join(',', parameters.CASCADES) }}
 
 
   # - job: "Cleanup"
