--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -8,15 +8,12 @@ jobs:
     pool: ${{ parameters.pool }}
     variables:
       - group: global-var-pipelines
-      - name: sharedPackagesFolder
-        value: "/root/.nuget/dolittle-packages/$(Build.Repository.Name)"
+      - name: SharedPackagesFolder
+        value: "/root/.nuget/dolittle-packages"
 
     steps:
       - checkout: self
         submodules: recursive
-
-      - script: rm -r $(sharedPackagesFolder) || true
-        displayName: Cleaning packages folder
 
       - task: Dolittle.tasks.SetupBuildContext.SetupBuildContext@0
         name: Context
@@ -34,14 +31,6 @@ jobs:
       - template: "./build.yml"
       
       - template: "./publish.yml"
-      # - task: NuGetCommand@2
-      #   displayName: Push Nuget packs
-      #   condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
-      #   inputs:
-      #     command: push
-      #     nugetFeedType: "external"
-      #     packagesToPush: "$(sharedPackagesFolder)/**/*.nupkg;!$(sharedPackagesFolder)/**/*.symbols.nupkg"
-      #     publishFeedCredentials: "myget_mathieu"
 
       - task: Dolittle.tasks.TagNewVersion.TagNewVersion@0
         condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
