--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -15,6 +15,10 @@ jobs:
       - checkout: self
         submodules: recursive
 
+      - bash: | 
+          echo -n "##vso[task.setvariable variable=Build.SourceVersionMessage;]"
+          git log -1 --pretty=%B | cat
+        
       - task: Dolittle.tasks.SetupBuildContext.SetupBuildContext@0
         name: Context
         displayName: Setting up context
