--- a/Source/DotNet/publish.yml
+++ b/Source/DotNet/publish.yml
@@ -17,5 +17,5 @@ steps:
   condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
   inputs:
     command: 'custom'
-    arguments: 'init "$$(Agent.TempDirectory)/Artifacts" $(SharedPackagesFolder) -Verbosity detailed'
+    arguments: 'init "$(Agent.TempDirectory)/Artifacts" $(SharedPackagesFolder) -Verbosity detailed'
 
