--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -7,6 +7,9 @@ steps:
 #     projectKey: $(sonarProjectKey)
 #     projectName: $(sonarProjectName)
 
+- bash: dotnet --info
+  displayName: Info
+
 - bash: dotnet build --configuration Release
   displayName: Build
   
