Install dotnet sdk 2.1 as temporary fix

--- a/Source/Agent/Dockerfile
+++ b/Source/Agent/Dockerfile
@@ -36,6 +36,7 @@ RUN apt-get update \
         yq \
         python3-pip \
         dotnet-sdk-3.0 \
+        dotnet-sdk-2.1 \
         openjdk-8-jre-headless
 
 WORKDIR /azp
