--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -10,13 +10,16 @@ steps:
 - bash: dotnet --info
   displayName: Info
 
-- bash: dotnet build --configuration Release
+- bash: dotnet restore --no-cache --verbosity detailed --configuration Release
+  displayName: Build
+
+- bash: dotnet build --no-restore --verbosity detailed --configuration Release
   displayName: Build
   
-- bash: dotnet test --configuration Release --no-build
+- bash: dotnet test --verbosity detailed --configuration Release --no-build
   displayName: Test
 
-- bash: dotnet pack --configuration Release --no-build --output "$(Agent.TempDirectory)/Artifacts" /p:PackageVersion=$(NewVersion.NextVersion) -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
+- bash: dotnet pack --verbosity detailed --configuration Release --no-build --output "$(Agent.TempDirectory)/Artifacts" /p:PackageVersion=$(NewVersion.NextVersion) -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
   displayName: Pack
 
 # - task: SonarCloudAnalyze@1
